Remove remaining references

--- a/docs/migration-guides/qiskit-1.0-features.mdx
+++ b/docs/migration-guides/qiskit-1.0-features.mdx
@@ -1019,9 +1019,7 @@ parallel_map(func, input)
 The `qiskit.tools.jupyter` submodule has been removed because the functionality
 in this module is tied to the legacy `qiskit-ibmq-provider` package, which is no
 longer supported. It also only supported `BackendV1` and not the newer
-[`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) interface. For
-similar functionality, see
-[`qiskit-ibm-provider.ibm_jupyter`](/api/qiskit-ibm-provider/ibm_jupyter).
+[`BackendV2`](/api/qiskit/qiskit.providers.BackendV2) interface.
 
 <span id="monitor"></span>
 ### monitor
