--- a/docs/guides/specify-runtime-options.mdx
+++ b/docs/guides/specify-runtime-options.mdx
@@ -159,7 +159,7 @@ Specifically, for any particular Estimator PUB:
 
 1. If the PUB specifies precision, use that value.
 2. If the precision keyword argument is specified in `run`, use that value.
-2. If `num_randomizations` and `shots_per_randomization` are specified as [`twirling` options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions) (enabled by default), their product is used to control the amount of data.
+2. If `num_randomizations` and `shots_per_randomization` are specified as [`twirling` options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions) (enabled by default), use their product to control the amount of data.
 3. If `estimator.options.default_shots` is specified, use that value to control the amount of data.
 4. If `estimator.options.default_precision` is specified, use that value.
 
