--- a/docs/guides/monitor-job.mdx
+++ b/docs/guides/monitor-job.mdx
@@ -27,6 +27,10 @@ Use the job instance to check the job status or retrieve the results by calling 
 
 Call `service.job(\<job\_id>)` to retrieve a job you previously submitted. If you don’t have the job ID, or if you want to retrieve multiple jobs at once; including jobs from retired QPUs (quantum processing units), call `service.jobs()` with optional filters instead. See [QiskitRuntimeService.jobs](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#jobs).
 
+<Admonition type="note" title="Deprecated provider packages">
+  `service.jobs()` also returns jobs run from the deprecated `qiskit-ibm-provider` package. Jobs submitted by the older (also deprecated) `qiskit-ibmq-provider` package are no longer available.
+</Admonition>
+
 ### Example
 
 This example returns the 10 most recent runtime jobs that were run on `my_backend`:
