--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Noise learning helper\n",
     "\n",
-    "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://arxiv.org/abs/2201.09866), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime`. However, versions of `qiskit-ibm-runtime` 0.27.1 and later include a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and associated  `NoiseLearnerOptions` class for executing and storing the results of these noise learning experiments. This page provides an overview of its usage and the associated options available.\n",
+    "The error mitigation techniques [PEA](./error-mitigation-and-suppression-techniques#probabilistic-error-amplification-pea) and [PEC](./error-mitigation-and-suppression-techniques#probabilistic-error-cancellation-pec) both utilize a noise learning component based on a [Pauli-Lindblad noise model](https://arxiv.org/abs/2201.09866), which is typically managed during execution after submitting one or more jobs through `qiskit-ibm-runtime`. However, versions of `qiskit-ibm-runtime` 0.27.1 and later include a [`NoiseLearner`](../api/qiskit-ibm-runtime/noise_learner) and associated  [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class to obtain the results of these noise learning experiments which can then be stored as a `NoiseLearnerResult`. This page provides an overview of its usage and the associated options available.\n",
     "\n",
     "\n",
     "## Overview\n",
@@ -23,19 +23,28 @@
    "outputs": [],
    "source": [
     "from qiskit import QuantumRegister, QuantumCircuit\n",
+    "from qiskit.transpiler import CouplingMap\n",
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.quantum_info import SparsePauliOp\n",
     "\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2\n",
     "from qiskit_ibm_runtime.noise_learner import NoiseLearner\n",
-    "from qiskit_ibm_runtime.options import NoiseLearnerOptions\n",
+    "from qiskit_ibm_runtime.options import NoiseLearnerOptions, ResilienceOptionsV2, EstimatorOptions\n",
     "\n",
-    "# Build a simple GHZ circuit with three entangling layers\n",
-    "circuit_to_learn = QuantumCircuit(3)\n",
-    "circuit_to_learn.h(0)\n",
+    "# Build a circuit with two entangling layers\n",
     "\n",
-    "circuit_to_learn.cx(0, 1)\n",
-    "circuit_to_learn.cx(1, 2)\n",
-    "circuit_to_learn.cx(0, 1)\n",
+    "num_qubits = 27\n",
+    "ring = CouplingMap.from_line(num_qubits, bidirectional=False)\n",
+    "edges = ring.graph.edge_list()\n",
+    "even_edges = [edge for edge in edges if edge[0]%2==0]\n",
+    "odd_edges = [edge for edge in edges if not edge[0]%2==0]\n",
+    "\n",
+    "circuit = QuantumCircuit(num_qubits)\n",
+    "for pair in even_edges:\n",
+    "    circuit.h(pair[0])\n",
+    "    circuit.cx(pair[0], pair[1])\n",
+    "for pair in odd_edges:\n",
+    "    circuit.cx(pair[0], pair[1])\n",
     "\n",
     "# Choose a backend to run on\n",
     "service = QiskitRuntimeService()\n",
@@ -43,12 +52,12 @@
     "\n",
     "# Transpile the circuit for execution\n",
     "pm = generate_preset_pass_manager(backend=backend, optimization_level=3)\n",
-    "circuit_to_run = pm.run(circuit_to_learn)\n",
+    "circuit_to_learn = pm.run(circuit)\n",
     "\n",
     "# Instantiate a NoiseLearner object and execute the noise learning program\n",
     "learner = NoiseLearner(mode=backend)\n",
-    "job = learner.run([circuit_to_run])\n",
-    "result = job.result()"
+    "job = learner.run([circuit_to_learn])\n",
+    "results = job.result()"
    ]
   },
   {
@@ -61,7 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = service.job('cv34gmahdzz0008meth0').result()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "33d8cc11-6c6f-4838-8038-dd9994476db4",
    "metadata": {},
    "outputs": [
@@ -69,29 +87,61 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Noise learner result contains 3 entries and has the following data:\n",
-      " NoiseLearnerResult(data=[LayerError(circuit=<qiskit.circuit.quantumcircuit.QuantumCircuit object at 0x7f5140f739d0>, qubits=[0, 1], error=PauliLindbladError(generators=['IX', 'IY', 'IZ', 'XI', 'XX', 'XY', 'XZ', 'YI', 'YX', 'YY', 'YZ', 'ZI',\n",
-      " 'ZX', 'ZY', 'ZZ'], rates=[0.00037, 0.00046, 0.00035, 0.00127, 0.00067, 0.0, 0.0, 0.00067, 0.00127, 0.0, 0.0, 0.00071, 0.0, 0.00035, 0.00046]))), LayerError(circuit=<qiskit.circuit.quantumcircuit.QuantumCircuit object at 0x7f5140f73410>, qubits=[0, 1, 2], error=PauliLindbladError(generators=['IIX', 'IIY', 'IIZ', 'IXI', 'IXX', 'IXY', 'IXZ', 'IYI', 'IYX', 'IYY',\n",
-      " 'IYZ', 'IZI', 'IZX', 'IZY', 'IZZ', 'XII', 'XXI', 'XYI', 'XZI', 'YII',\n",
-      " 'YXI', 'YYI', 'YZI', 'ZII', 'ZXI', 'ZYI', 'ZZI'], rates=[0.00068, 0.00023, 0.00041, 0.00093, 0.00056, 0.00034, 0.0001, 0.00023, 0.00126, 0.0, 0.0, 0.00094, 5e-05, 0.00041, 0.00023, 0.00093, 0.0, 0.0, 0.0, 0.00259, 9e-05, 9e-05, 0.0, 0.01374, 0.00024, 0.00024, 0.0]))), LayerError(circuit=<qiskit.circuit.quantumcircuit.QuantumCircuit object at 0x7f5140f722d0>, qubits=[0, 1, 2], error=PauliLindbladError(generators=['IIX', 'IIY', 'IIZ', 'IXI', 'IXX', 'IXY', 'IXZ', 'IYI', 'IYX', 'IYY',\n",
-      " 'IYZ', 'IZI', 'IZX', 'IZY', 'IZZ', 'XII', 'XXI', 'XYI', 'XZI', 'YII',\n",
-      " 'YXI', 'YYI', 'YZI', 'ZII', 'ZXI', 'ZYI', 'ZZI'], rates=[0.00068, 0.00095, 0.00704, 0.00063, 0.00037, 5e-05, 0.0, 0.0, 0.00021, 0.00026, 0.00019, 0.00019, 0.00027, 0.00032, 0.00025, 0.00083, 0.00097, 0.00028, 0.00017, 0.00097, 0.00083, 0.00026, 0.00038, 0.00149, 0.00025, 0.0009, 0.00061])))], metadata={'backend': 'ibm_brisbane', 'input_options': {'max_layers_to_learn': 4, 'shots_per_randomization': 128, 'num_randomizations': 32, 'layer_pair_depths': [0, 1, 2, 4, 16, 32], 'twirling_strategy': 'active-accum'}})\n",
+      "Noise learner result contains 2 entries and has the following type:\n",
+      " <class 'qiskit_ibm_runtime.utils.noise_learner_result.NoiseLearnerResult'>\n",
       "\n",
-      "The layer error model for the first layer has data:\n",
-      " LayerError(circuit=<qiskit.circuit.quantumcircuit.QuantumCircuit object at 0x7f5140f739d0>, qubits=[0, 1], error=PauliLindbladError(generators=['IX', 'IY', 'IZ', 'XI', 'XX', 'XY', 'XZ', 'YI', 'YX', 'YY', 'YZ', 'ZI',\n",
-      " 'ZX', 'ZY', 'ZZ'], rates=[0.00037, 0.00046, 0.00035, 0.00127, 0.00067, 0.0, 0.0, 0.00067, 0.00127, 0.0, 0.0, 0.00071, 0.0, 0.00035, 0.00046])))\n",
+      "Each element of `NoiseLearnerResult` then contains an object of type:\n",
+      " <class 'qiskit_ibm_runtime.utils.noise_learner_result.LayerError'>\n",
       "\n",
-      "And the Pauli Lindblad model has has the following data: \n",
-      "PauliLindbladError(generators=['IX', 'IY', 'IZ', 'XI', 'XX', 'XY', 'XZ', 'YI', 'YX', 'YY', 'YZ', 'ZI',\n",
-      " 'ZX', 'ZY', 'ZZ'], rates=[0.00037, 0.00046, 0.00035, 0.00127, 0.00067, 0.0, 0.0, 0.00067, 0.00127, 0.0, 0.0, 0.00071, 0.0, 0.00035, 0.00046])\n",
+      "And each of these `LayerError` objects possess the following data: \n",
+      "PauliLindbladError(generators=['IIIIIIIIIIIIIIIIIIIIIIIIIIX', 'IIIIIIIIIIIIIIIIIIIIIIIIIIY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIIZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIXI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIXX', 'IIIIIIIIIIIIIIIIIIIIIIIIIXY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIXZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIYX', 'IIIIIIIIIIIIIIIIIIIIIIIIIYY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIYZ', 'IIIIIIIIIIIIIIIIIIIIIIIIIZI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIZX', 'IIIIIIIIIIIIIIIIIIIIIIIIIZY',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIIZZ', 'IIIIIIIIIIIIIIIIIIIIIIIIXII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIXXI', 'IIIIIIIIIIIIIIIIIIIIIIIIXYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIXZI', 'IIIIIIIIIIIIIIIIIIIIIIIIYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIYXI', 'IIIIIIIIIIIIIIIIIIIIIIIIYYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIYZI', 'IIIIIIIIIIIIIIIIIIIIIIIIZII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIZXI', 'IIIIIIIIIIIIIIIIIIIIIIIIZYI',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIIZZI', 'IIIIIIIIIIIIIIIIIIIIIIIXIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIIYIII', 'IIIIIIIIIIIIIIIIIIIIIIIZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXIIII', 'IIIIIIIIIIIIIIIIIIIIIIXXIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIXYIII', 'IIIIIIIIIIIIIIIIIIIIIIXZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYIIII', 'IIIIIIIIIIIIIIIIIIIIIIYXIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIYYIII', 'IIIIIIIIIIIIIIIIIIIIIIYZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZIIII', 'IIIIIIIIIIIIIIIIIIIIIIZXIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIIZYIII', 'IIIIIIIIIIIIIIIIIIIIIIZZIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXIIIII', 'IIIIIIIIIIIIIIIIIIIIIXIIXII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXIIYII', 'IIIIIIIIIIIIIIIIIIIIIXIIZII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXXIIII', 'IIIIIIIIIIIIIIIIIIIIIXYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIXZIIII', 'IIIIIIIIIIIIIIIIIIIIIYIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYIIXII', 'IIIIIIIIIIIIIIIIIIIIIYIIYII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYIIZII', 'IIIIIIIIIIIIIIIIIIIIIYXIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIYYIIII', 'IIIIIIIIIIIIIIIIIIIIIYZIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZIIIII', 'IIIIIIIIIIIIIIIIIIIIIZIIXII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZIIYII', 'IIIIIIIIIIIIIIIIIIIIIZIIZII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZXIIII', 'IIIIIIIIIIIIIIIIIIIIIZYIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIIZZIIII', 'IIIIIIIIIIIIIIIIIIIIXIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXIIXIII', 'IIIIIIIIIIIIIIIIIIIIXIIYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIXIIZIII', 'IIIIIIIIIIIIIIIIIIIIYIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYIIXIII', 'IIIIIIIIIIIIIIIIIIIIYIIYIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIYIIZIII', 'IIIIIIIIIIIIIIIIIIIIZIIIIII',\n",
+      " 'IIIIIIIIIIIIIIIIIIIIZIIXIII', 'IIIIIIIIIIIIIIIIIIIIZIIYIII', ...], rates=[0.00067, 0.00083, 0.00523, 0.00044, 0.00011, 2e-05, 7e-05, 0.00031, 0.00011, 2e-05, 7e-05, 0.0, 0.0, 0.0, 0.0, 0.00092, 0.00052, 0.00065, 9e-05, 0.0, 0.0, 0.0, 0.00205, 0.0, 0.0, 0.0, 0.0017, 8e-05, 0.00083, 0.00251, 0.00059, 0.0002, 0.0, 0.0, 0.00064, 0.0, 0.0002, 0.0, 0.0005, 0.0, 0.0, 0.00314, 0.00065, 0.0, 0.0, 0.00012, 0.00083, 0.00079, 0.00027, 0.00053, 0.0, 0.0012, 0.00075, 0.0, 0.0, 0.00194, 0.0, 0.0, 0.00051, 0.00142, 0.0, 5e-05, 0.00248, 0.00204, 0.00102, 0.00027, 4e-05, 0.00122, 2e-05, 0.00027, 0.00044, 0.0, 0.0, 0.0, 0.00175, 0.00083, 0.00087, 0.00116, 0.00081, 0.0, 0.0, 0.0, 0.00104, 0.0, 0.00013, 9e-05, 0.00048, 0.00013, 0.0, 9e-05, 0.00037, 1e-05, 8e-05, 6e-05, 0.00062, 0.0, 0.0, 0.00046, 1e-05, 0.00012, 2e-05, 0.00053, 7e-05, 0.0, 0.00134, 0.0, 0.00041, 0.00035, 0.00018, 0.00071, 0.00126, 0.00087, 0.00089, 0.00073, 0.00093, 0.00123, 0.00122, 0.0, 0.00056, 0.0, 0.0, 0.0009, 0.00077, 0.0002, 0.00013, 0.00068, 0.00068, 0.0, 0.00011, 0.0, 0.00079, 0.0, 0.0, 0.00011, 0.00062, 7e-05, 2e-05, 2e-05, 0.00131, 0.0009, 0.00079, 0.00031, 0.00033, 0.00023, 0.00015, 0.00045, 0.00024, 0.0, 0.00013, 0.00054, 0.00116, 0.0, 0.0, 0.00021, 0.00189, 0.0, 0.00021, 0.0, 0.00188, 0.0, 0.0, 0.0, 0.00076, 0.001, 0.00097, 0.00017, 0.00046, 0.0, 0.0, 0.00064, 0.00056, 0.00013, 0.0, 0.00055, 0.00111, 4e-05, 4e-05, 0.0, 0.00076, 0.0, 0.00031, 0.00017, 0.00188, 0.00031, 0.0, 0.00017, 0.00148, 0.00211, 0.00138, 0.0001, 0.00052, 0.00027, 0.00012, 0.00087, 0.00068, 0.0, 4e-05, 0.00071, 0.00059, 0.0, 2e-05, 1e-05, 0.0007, 0.0, 1e-05, 2e-05, 0.00109, 0.00023, 5e-05, 5e-05, 0.00094, 0.00072, 0.00061, 0.0, 0.00028, 2e-05, 1e-05, 0.00081, 0.00028, 0.0, 0.0, 0.00081, 0.00123, 0.0, 0.00027, 0.00027, 0.00181, 0.00046, 0.00026, 0.0, 0.00706, 0.00046, 0.0, 0.00026, 0.00012, 0.00061, 0.00039, 0.00034, 0.00048, 0.00025, 0.00021, 0.00172, 0.00073, 0.00079, 0.00778, 0.00253, 0.00016, 0.00317, 0.0, 0.00094, 0.0, 0.00013, 0.00037, 0.00267, 0.00066, 0.00046, 0.0, 0.00013, 0.0, 0.00037, 0.0011, 0.00128, 0.00236, 0.00124, 0.0, 0.0, 0.00518, 0.00067, 3e-05, 3e-05, 2e-05, 0.00095, 3e-05, 2e-05, 3e-05, 0.00079, 0.0, 0.00014, 0.00014, 0.00176, 0.00103, 0.00074, 0.00035, 0.0, 0.0, 0.0, 0.00121, 3e-05, 0.00019, 0.00016, 0.00112, 0.00114, 0.0, 0.0, 0.0, 0.0, 0.0, 0.00109, 0.0, 0.0, 0.0, 0.0, 0.00124, 0.0036, 0.00357, 0.0, 0.0, 0.00357, 0.0036, 0.0, 0.0, 0.00066, 0.00052, 0.00093, 0.00079])\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "print(f'Noise learner result contains {len(result.data)} entries and has the following data:\\n {result}\\n')\n",
-    "print(f'The layer error model for the first layer has data:\\n {result.data[0]}\\n')\n",
-    "print(f'And the Pauli Lindblad model has has the following data: \\n{result.data[0].error}\\n')"
+    "print(f'Noise learner result contains {len(results.data)} entries'\\\n",
+    "       f' and has the following type:\\n {type(results)}\\n')\n",
+    "print(f'Each element of `NoiseLearnerResult` then contains'\\\n",
+    "       f' an object of type:\\n {type(results.data[0])}\\n')\n",
+    "print(f'And each of these `LayerError` objects possess the'\\\n",
+    "      f' following data: \\n{results.data[0].error}\\n')"
    ]
   },
   {
@@ -113,7 +163,7 @@
    "source": [
     "## Noise learning options\n",
     "\n",
-    "There are a few options available to input into a `NoiseLearner` object, can be set with when instantiated. These are encapsulated by the `qiskit_ibm_runtime.options.NoiseLearnerOptions` class and include:\n",
+    "There are a few options available to input into a `NoiseLearner` object, can be set with when instantiated. These are encapsulated by the [`qiskit_ibm_runtime.options.NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class and include the ability to specify the maximum layers to learn, number of randomizations\n",
     "\n",
     "- `max_layers_to_learn`: The maximum number of unique entangling layers to learn (the default value is `4` and can be set to `None` to indicate no limit on the number of layers)\n",
     "- `num_randomizations`: Total number of random circuits to use per learning circuit configuration\n",
@@ -157,7 +207,71 @@
     "# Instantiate a NoiseLearner object and execute the noise learning program\n",
     "learner = NoiseLearner(mode=backend, options=learner_options)\n",
     "job = learner.run([circuit_to_run])\n",
-    "result = job.result()"
+    "results = job.result()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Input noise model to primitive\n",
+    "\n",
+    "The noise model learned on the circuit can also be used as an input to the `EstimatorV2` primitive implemented in Qiskit IBM Runtime. This can be passed through to the Estimator via a `ResilienceOptionsV2` object "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Specify options via a ResilienceOptionsV2 object\n",
+    "resilience_options = ResilienceOptionsV2(layer_noise_model=[result for result in results])\n",
+    "estimator_options = EstimatorOptions(resilience=resilience_options)\n",
+    "estimator = EstimatorV2(mode=backend, options=estimator_options)\n",
+    "\n",
+    "obs = SparsePauliOp([\"Z\" * num_qubits]).apply_layout(circuit_to_learn.layout)\n",
+    "job = estimator.run([(circuit_to_learn, obs)])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "or by passing in an appropriately formatted dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Specify options via a dictionary\n",
+    "options_dict = {'resilience_level':2,\n",
+    "                'resilience':{'layer_noise_model':[result for result in results]}}\n",
+    "\n",
+    "estimator = EstimatorV2(mode=backend, options=options_dict)\n",
+    "\n",
+    "obs = SparsePauliOp([\"Z\" * num_qubits]).apply_layout(circuit_to_learn.layout)\n",
+    "job = estimator.run([(circuit_to_learn, obs)])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Read more about [configuring error mitigation](configure-error-mitigation).\n",
+    "    - Review the [EstimatorOptions API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [ResilienceOptionsV2 API reference](/api/qiskit-ibm-runtime/qiksit_ibm_runtime.options.ResilienceOptionsV2).\n",
+    "    - Learn more about [error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) that are available through Qiskit Runtime.\n",
+    "    - Review how to [specify options](specify-runtime-options) for the Qiskit Runtime primitives.\n",
+    "    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).\n",
+    "</Admonition>"
    ]
   }
  ],
@@ -178,7 +292,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.7"
   },
   "title": "Noise learning helper"
  },
