--- a/docs/guides/specify-runtime-options.mdx
+++ b/docs/guides/specify-runtime-options.mdx
@@ -140,7 +140,7 @@ The `SamplerV2.run` method accepts two arguments: a list of PUBs, each of which 
 
 However, if `shots` is not specified by any PUB or in the run keyword argument (or if they are all `None`), then the shots value from the options is used, most notably `default_shots`.
 
-Finally, because the [`twirling` options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions) `num_randomizations` and `shots_per_randomization` are enabled by default, if the only way shots are specified is by the `default_shots` value, the number of shots will actually be the product of `num_randomizations` and `shots_per_randomization`.
+Finally, because the [`twirling` options](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.TwirlingOptions) `num_randomizations` and `shots_per_randomization` are enabled by default, the number of shots will actually be the product of `num_randomizations` and `shots_per_randomization` if the `default_shots` value is the only way shots are specified.
 
 To summarize, this is the order of precedence for specifying shots in the Sampler, for any particular PUB:
 
