Edit NoiseLearner Options

--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -71,6 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "02d58a07-c1a0-4e63-9561-d32680ef62a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,17 +164,7 @@
    "source": [
     "## Noise learning options\n",
     "\n",
-    "There are a few options available to input into a `NoiseLearner` object, can be set with when instantiated. These are encapsulated by the [`qiskit_ibm_runtime.options.NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) class and include the ability to specify the maximum layers to learn, number of randomizations\n",
-    "\n",
-    "- `max_layers_to_learn`: The maximum number of unique entangling layers to learn (the default value is `4` and can be set to `None` to indicate no limit on the number of layers)\n",
-    "- `num_randomizations`: Total number of random circuits to use per learning circuit configuration\n",
-    "- `shots_per_randomization`: Total number of shots per learning circuit\n",
-    "- `layer_pair_depths`: The circuit depths to us in the learning experiments (measured in number of pairs)\n",
-    "- `twirling_strategy`: The twirling strategy used in the layers of two-qubit twirled gates. The allowed values are:\n",
-    "    - `\"active\"`: only instruction qubits are twirled in each individual twirled layer\n",
-    "    - `\"active-circuit\"`: in each twirled layer, the union of all qubits with an instruction are twirled\n",
-    "    - `\"active-accum\"`: in each twirled layer, the union of all qubits with an instruction in the circuit *up to the current layer* are twirled\n",
-    "    - `\"all\"`: in each twirled layer, *all* qubits in the circuit are twirled\n",
+    "There are a few options available to input into a `NoiseLearner` object, can be set with when instantiated. These are encapsulated by the `qiskit_ibm_runtime.options.NoiseLearnerOptions` class and include the ability to specify the maximum layers to learn, number of randomizations, and the twirling strategy, among others. Refer to the API documentation about [`NoiseLearnerOptions`](../api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.NoiseLearnerOptions) for more detailed information.\n",
     "\n",
     "Below is a simple example showing how to use the `NoiseLearnerOptions` in a `NoiseLeaner` experiment:"
    ]
@@ -212,20 +203,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "694b0e38-7aeb-48e0-8598-b64cff395bc2",
    "metadata": {},
    "source": [
     "## Input noise model to primitive\n",
     "\n",
-    "The noise model learned on the circuit can also be used as an input to the `EstimatorV2` primitive implemented in Qiskit IBM Runtime. This can be passed through to the Estimator via a `ResilienceOptionsV2` object "
+    "The noise model learned on the circuit can also be used as an input to the `EstimatorV2` primitive implemented in Qiskit IBM Runtime. This can be passed through to the Estimator via a `ResilienceOptionsV2` object"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "8aa753bc-915d-4d47-ba56-5179ec9cf4ca",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Specify options via a ResilienceOptionsV2 object\n",
     "resilience_options = ResilienceOptionsV2(layer_noise_model=[result for result in results])\n",
     "estimator_options = EstimatorOptions(resilience=resilience_options)\n",
@@ -237,6 +229,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "199d18c8-5eba-44db-a6cf-a9a7a8018734",
    "metadata": {},
    "source": [
     "or by passing in an appropriately formatted dictionary"
@@ -245,10 +238,10 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "6dcb70fe-e291-4b5a-a79b-14cace921905",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# Specify options via a dictionary\n",
     "options_dict = {'resilience_level':2,\n",
     "                'resilience':{'layer_noise_model':[result for result in results]}}\n",
@@ -256,18 +249,19 @@
     "estimator = EstimatorV2(mode=backend, options=options_dict)\n",
     "\n",
     "obs = SparsePauliOp([\"Z\" * num_qubits]).apply_layout(circuit_to_learn.layout)\n",
-    "job = estimator.run([(circuit_to_learn, obs)])\n"
+    "job = estimator.run([(circuit_to_learn, obs)])"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "6bcd1032-a674-466a-b40b-87f0c4d85984",
    "metadata": {},
    "source": [
     "## Next steps\n",
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "    - Read more about [configuring error mitigation](configure-error-mitigation).\n",
-    "    - Review the [EstimatorOptions API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [ResilienceOptionsV2 API reference](/api/qiskit-ibm-runtime/qiksit_ibm_runtime.options.ResilienceOptionsV2).\n",
+    "    - Review the [EstimatorOptions API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.EstimatorOptions) and [ResilienceOptionsV2 API reference](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.options.ResilienceOptionsV2).\n",
     "    - Learn more about [error mitigation and suppression techniques](error-mitigation-and-suppression-techniques) that are available through Qiskit Runtime.\n",
     "    - Review how to [specify options](specify-runtime-options) for the Qiskit Runtime primitives.\n",
     "    - Read [Migrate to V2 primitives](/migration-guides/v2-primitives).\n",
@@ -292,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3"
   },
   "title": "Noise learning helper"
  },
