Use consistent name for Qiskit Runtime Client

--- a/docs/guides/latest-updates.mdx
+++ b/docs/guides/latest-updates.mdx
@@ -35,9 +35,9 @@ For more details, read the post about the release on the [IBM Quantum blog](http
 
 {/* use url format /api/qiskit/release-notes/X.X to link to the specific X.X version of the release notes */}
 
-### Qiskit Runtime IBM Client 0.28.0
+### Qiskit Runtime Client 0.28.0
 
-*To see the release notes for all versions, visit the [Qiskit Runtime IBM Client release notes](/api/qiskit-ibm-runtime/release-notes).*
+*To see the release notes for all versions, visit the [Qiskit Runtime Client release notes](/api/qiskit-ibm-runtime/release-notes).*
 
 **Highlights from the 0.28.0 (2024-08-15) version release**
 
@@ -63,7 +63,7 @@ On the IBM Quantum blog, we take a deep dive into the new beta release with a sp
 
 {/* no other release notes available yet */}
 
-## Qiskit IBM Runtime service updates
+## Qiskit Runtime service updates
 
 This summary of the latest changes to the Qiskit Runtime service applies to anyone using Qiskit Runtime, regardless of how you communicate with the service (using qiskit-ibm-runtime or otherwise), or which version of the client SDK you use.
 
@@ -90,7 +90,7 @@ Probabilistic error amplification (PEA) error mitigation method is now available
 
 ### 28 March 2024
 
-Qiskit Runtime primitives now support OpenQASM 3 as the input format for circuits and standard JSON output format. See [Qiskit IBM Runtime REST API](/api/runtime) for examples.
+Qiskit Runtime primitives now support OpenQASM 3 as the input format for circuits and standard JSON output format. See [Qiskit Runtime REST API](/api/runtime) for examples.
 
 ## IBM Quantum blog: Defining — and citing — the Qiskit SDK
 
