--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -113,7 +113,7 @@
    "source": [
     "## Save results to disk\n",
     "\n",
-    "You may also want to save results to disk. To do this, use Python's built-in JSON library with Qiskit IBM Runtime's encoders."
+    "You may also want to save results to disk. To do this, use Python's built-in JSON library with Qiskit Runtime's encoders."
    ]
   },
   {
