--- a/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
+++ b/docs/migration-guides/qiskit-runtime-from-ibmq-provider.mdx
@@ -1,6 +1,6 @@
 ---
-title: Migrate from qiskit_ibm_provider
-description: How to migrate `backend.run()` from Qiskit IBM Provider to Qiskit IBM Runtime
+title: Migrate from qiskit-ibmq-provider
+description: How to migrate `backend.run()` from qiskit-ibmq-provider to Qiskit Runtime
 ---
 
 # Migrate from `qiskit_ibmq_provider`
