--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -57,11 +57,11 @@ Be aware that if an instance has been marked "limited" by your administrator and
 
 An alert will display on an instance's usage when it has exceeded its allocation.
 
-![Collaborator's view of their dashboard, reflecting an instance that has exceeded its specified limit](/images/guides/instances/exceeded-limit-instance.png)
-_Collaborator's view of their dashboard, reflecting an instance that has exceeded its specified limit_
+![Collaborator's dashboard view, reflecting an instance that has exceeded its specified limit](/images/guides/instances/exceeded-limit-instance.png)
+_Collaborator's dashboard view, reflecting an instance that has exceeded its specified limit_
 
-![Collaborator's view of their dashboard, reflecting an instance (with no limit specified) that has exceeded its allocation](/images/guides/instances/exceeded-allocation-instance.png)
-_Collaborator's view of their dashboard, reflecting an instance (with no limit specified) that has exceeded its allocation_
+![Collaborator's dashboard view, reflecting an instance (with no limit specified) that has exceeded its allocation](/images/guides/instances/exceeded-allocation-instance.png)
+_Collaborator's dashboard view, reflecting an instance (with no limit specified) that has exceeded its allocation_
 
 <span id="connect-instance"></span>
 ## Connect to an instance
