--- a/docs/guides/fair-share-scheduler.mdx
+++ b/docs/guides/fair-share-scheduler.mdx
@@ -15,14 +15,14 @@ When you submit a job to a quantum processing unit (QPU), it enters the schedule
 *   **Hub:** Administrative hub, which represents the top level of an organization, such as an academic, industry, or research partner.
 *   **Group:** A mid-level structure to which access allocation can be allocated by the hub for one or more collections of users (projects).
 *   **Project:** The base-level construct to which time are allocated from the overarching group, and to which users are directly assigned.
-*   **Scheduling window:** The fair-share scheduler accounts for usage over a rolling time window. Only execution time accumulated within that window is accounted for the purpose of fairness. The length of that window is currently 28 days. When the fair-share scheduler is invoked, it takes into account usage starting 28 days ago.
-*   **Time used:** For every group and project, during the scheduling window, we account for all usage on all the QPUs of the IBM Quantum Premium Plan. These include all successful jobs, as well as jobs returning known select error codes.
+*   **28-day rolling window:** The fair-share scheduler accounts for usage over a rolling time window. Only execution time accumulated within that window is accounted for the purpose of fairness. The length of that window is currently 28 days. When the fair-share scheduler is invoked, it takes into account usage starting 28 days ago.
+*   **Time used:** For every group and project, during the 28-day rolling window, we account for all usage on all the QPUs of the IBM Quantum Premium Plan. These include all successful jobs, as well as jobs returning known select error codes.
 
 ## Allocation and administration
 
 IBM&reg; assigns allocation to each hub based on their allotted capacity contracted under the Premium Plan subscription. Hub administrators then decide what portion of this allocation to assign to each of their groups. Similarly, group administrators will decide what portion of allocation to assign to each of their projects.
 
-The hub administration user interface is used to assign allocation, in minutes, to groups. The entire hub allotted time can be distributed to the underlying groups, and the hub administrator can control the time distribution by specifying the allocation in minutes for each group. 
+The hub administration user interface is used to assign allocation, in minutes, to groups. The entire hub allotted time can be distributed to the underlying groups, and the hub administrator can control the time distribution by specifying the allocation in minutes for each group.
 
 The fair-share scheduler takes into consideration how the allotted time is distributed across groups and projects to determine job prioritization.
 
