Add an ID to link to

--- a/docs/guides/hello-world.ipynb
+++ b/docs/guides/hello-world.ipynb
@@ -175,6 +175,7 @@
    "id": "83bf9151-3bc9-40d2-8615-31570238b08e",
    "metadata": {},
    "source": [
+    "<span id=\"optimize\"></span>\n",
     "### Step 2. Optimize the circuits and operators\n",
     "\n",
     "When executing circuits on a device, it is important to optimize the set of instructions that the circuit contains and minimize the overall depth (roughly the number of instructions) of the circuit. This ensures that you obtain the best results possible by reducing the effects of error and noise. Additionally, the circuit's instructions must conform to a backend device's [Instruction Set Architecture (ISA)](./transpile#instruction-set-architecture) and must consider the device's basis gates and qubit connectivity.\n",
