--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -55,7 +55,7 @@ When you execute a task using an IBM Quantum service (for example, sending circu
 
 ## How usage affects job priority within an instance
 
-*This section applies to Premium Plan users only, since their access includes multiple instances.* When determining which jobs to run, the [fair-share scheduler](./fair-share-scheduler) takes into account an instance's usage of the QPU in question. For example, an instance that has already run many jobs on a certain QPU might not have as high a priority on that QPU, when compared to an instance that has very low usage.
+*This section applies to Premium Plan users only, since their access includes multiple instances.* When determining which jobs to run, the [fair-share scheduler](./fair-share-scheduler) takes into account an instance's [usage](execution-modes#usage). For example, an instance that has already run many jobs might have a lower priority when compared to an instance that has very low usage.
 
 The jobs you run and the jobs run by other collaborators in the same instance count toward the reported usage for that instance. You can see the usage for an instance on your [dashboard](https://quantum.ibm.com/) (use the [instance switcher](#switch-instances) at the top of the page to change which instance is reflected on your dashboard).
 
