--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -10,31 +10,41 @@ Qiskit addons are modular tools for building utility-grade quantum [workflows](/
 
 ## Mapping tools
 
-Multiproduct formulas
-- Reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
+### Multiproduct formulas
+
+Reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
+
 - repo: [https://github.com/Qiskit/qiskit-addon-mpf](https://github.com/Qiskit/qiskit-addon-mpf)
 - documentation: **insert-link**
 
 ## Optimizing tools
 
-Operator backpropagation
-- Reduce circuit depth by trimming operations from its end at the cost of more operator measurements.
+### Operator backpropagation
+
+Reduce circuit depth by trimming operations from its end at the cost of more operator measurements.
+
 - repo: [https://github.com/Qiskit/qiskit-addon-obp](https://github.com/Qiskit/qiskit-addon-obp)
 - documentation: **insert-link**
 
-Circuit cutting
-- Reduce the depth of transpiled circuits by cutting long range gates.
+### Circuit cutting
+
+Reduce the depth of transpiled circuits by cutting long range gates.
+
 - repo: [https://github.com/Qiskit/qiskit-addon-cutting](https://github.com/Qiskit/qiskit-addon-cutting)
 - documentation: **insert-link**
 
 ## Postprocessing tools
 
-Sample-based quantum diagonalization
-- Classically postprocess noisy quantum samples to yield more accurate energy estimations.
+### Sample-based quantum diagonalization
+
+Classically postprocess noisy quantum samples to yield more accurate energy estimations.
+
 - repo: [https://github.com/Qiskit/qiskit-addon-sqd](https://github.com/Qiskit/qiskit-addon-sqd)
 - documentation: **insert-link**
 
-### Dice solver
-- Python wrapper for a Dice-based eigensolver that can be used as a plugin to `qiskit-addon-sqd` to support larger problem instances.
+#### Dice solver
+
+Python wrapper for a Dice-based eigensolver that can be used as a plugin to `qiskit-addon-sqd` to support larger problem instances.
+
 - repo: [https://github.com/Qiskit/qiskit-addon-dice-solver](https://github.com/Qiskit/qiskit-addon-sqd)
 - documentation: **insert-link**
