--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -5,39 +5,38 @@ description: Understand the Qiskit addon tools , which help you build utility-gr
 
 # Qiskit addons
 
-Qiskit addons are modular tools for building utility-grade quantum [workflows](/intro-to-patterns) powered by Qiskit.
-
+Qiskit addons are a collection of modular tools for building utility-scale workloads powered by Qiskit. These tools are derived from advanced research capabilities and are designed to be stackable with other tools as part of a [Qiskit pattern.](/intro-to-patterns)
 
 ## Mapping tools
 
-**Multiproduct formulas**
+### Multiproduct formulas
 
-Reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
+Multiproduct formulas (MPF) reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
 
 - Repository: [https://github.com/Qiskit/qiskit-addon-mpf](https://github.com/Qiskit/qiskit-addon-mpf)
 - Documentation: **insert-link**
 
 ## Optimizing tools
 
-**Operator backpropagation**
+### Operator backpropagation
 
-Reduce circuit depth by trimming operations from the end at the cost of more operator measurements.
+Operator backpropagation (OBP) reduces circuit depth circuit depth by trimming operations from the end at the cost of more operator measurements.
 
 - Repository: [https://github.com/Qiskit/qiskit-addon-obp](https://github.com/Qiskit/qiskit-addon-obp)
 - Documentation: **insert-link**
 
-**Circuit cutting**
+### Circuit cutting
 
-Reduce the depth of transpiled circuits by cutting long range gates.
+Circuit cutting reduces the depth of transpiled circuits by cutting long range gates.
 
 - Repository: [https://github.com/Qiskit/qiskit-addon-cutting](https://github.com/Qiskit/qiskit-addon-cutting)
 - Documentation: **insert-link**
 
 ## Postprocessing tools
 
-**Sample-based quantum diagonalization**
+### Sample-based quantum diagonalization
 
-Classically postprocess noisy quantum samples to yield more accurate energy estimations.
+Sample-based quantum diagonalization (SQD) classically postprocesses noisy quantum samples to yield more accurate energy estimations.
 
 - Repository: [https://github.com/Qiskit/qiskit-addon-sqd](https://github.com/Qiskit/qiskit-addon-sqd)
 - Documentation: **insert-link**
