--- a/docs/guides/ai-transpiler-passes.mdx
+++ b/docs/guides/ai-transpiler-passes.mdx
@@ -24,7 +24,7 @@ The following passes are currently available:
  - `AILinearFunctionSynthesis`: Linear function circuit synthesis
  - `AIPermutationSynthesis`: Permutation circuit synthesis
 
-To use the AI transpiler passes through our cloud services, install the `qiskit-transpiler-service` package (see instructions [here](qiskit-transpiler-service#install-transpiler-service)).
+To use the AI transpiler passes through our cloud services, install the `qiskit-ibm-transpiler` package (see instructions [here](./qiskit-transpiler-service#install-transpiler-service)).
 
 ## AI routing pass
 
