--- a/docs/guides/qiskit-addons.mdx
+++ b/docs/guides/qiskit-addons.mdx
@@ -13,24 +13,24 @@ Qiskit addons are a collection of modular tools for building utility-scale workl
 
 Multiproduct formulas (MPF) reduce the Trotter error of Hamiltonian dynamics through a weighted combination of several circuit executions.
 
-- Repository: [https://github.com/Qiskit/qiskit-addon-mpf](https://github.com/Qiskit/qiskit-addon-mpf)
-- Documentation: **insert-link**
+- Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-mpf)
+- Read the [documentation.](https://qiskit.github.io/qiskit-addon-mpf)
 
 ## Optimizing tools
 
 ### Operator backpropagation
 
-Operator backpropagation (OBP) reduces circuit depth circuit depth by trimming operations from the end at the cost of more operator measurements.
+Operator backpropagation (OBP) reduces circuit depth by trimming operations from the end at the cost of more operator measurements.
 
-- Repository: [https://github.com/Qiskit/qiskit-addon-obp](https://github.com/Qiskit/qiskit-addon-obp)
-- Documentation: **insert-link**
+- Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-obp)
+- Read the [documentation.](https://qiskit.github.io/qiskit-addon-obp)
 
 ### Circuit cutting
 
-Circuit cutting reduces the depth of transpiled circuits by cutting long range gates.
+Circuit cutting reduces the depth of transpiled circuits by decomposing long range gates.
 
-- Repository: [https://github.com/Qiskit/qiskit-addon-cutting](https://github.com/Qiskit/qiskit-addon-cutting)
-- Documentation: **insert-link**
+- Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-cutting)
+- Read the [documentation.](https://qiskit.github.io/qiskit-addon-cutting)
 
 ## Postprocessing tools
 
@@ -38,5 +38,5 @@ Circuit cutting reduces the depth of transpiled circuits by cutting long range g
 
 Sample-based quantum diagonalization (SQD) classically postprocesses noisy quantum samples to yield more accurate energy estimations.
 
-- Repository: [https://github.com/Qiskit/qiskit-addon-sqd](https://github.com/Qiskit/qiskit-addon-sqd)
-- Documentation: **insert-link**
+- Visit the [GitHub repository.](https://github.com/Qiskit/qiskit-addon-sqd)
+- Read the [documentation.](https://qiskit.github.io/qiskit-addon-sqd)
